# Morpheus

./: .gitmodules  CMakeLists.txt  Readme.md  morpheus-redux.code-workspace
Morpheus/: CMakeLists.txt
Morpheus/AsyncTest/: CMakeLists.txt  main.cpp
Morpheus/AsyncTest/assets/: material.json  test.txt
Morpheus/Editor2DTest/: CMakeLists.txt  main.cpp
Morpheus/EmbeddedGeoTest/: CMakeLists.txt  main.cpp
Morpheus/Engine/: CMakeLists.txt
Morpheus/Engine/embed/: boxmesh.hpp  bunnymesh.hpp  matballmesh.hpp  monkeymesh.hpp  planemesh.hpp  spheremesh.hpp  teapotmesh.hpp  torusmesh.hpp
Morpheus/Engine/include/Engine/: Brdf.hpp  Buffer.hpp  Camera.hpp  CameraComponent.hpp  Core.hpp  DefaultRenderer.hpp  DefaultRendererOld.hpp  Defines.hpp  DynamicGlobalsBuffer.hpp  EditorCameraController.hpp  EmptyRenderer.hpp  Engine.hpp  Entity.hpp  EntityPrototype.hpp  Frame.hpp  Geometry.hpp  GeometryResource.hpp  GeometryStructures.hpp  Graph.hpp  Graphics.hpp  HdriToCubemap.hpp  Im3d.hpp  ImGuiObject.hpp  InputController.hpp  LightProbe.hpp  LightProbeProcessor.hpp  Loading.hpp  MaterialPrototypes.hpp  MaterialResource.hpp  MaterialView.hpp  PhysicsComponents.hpp  PipelineResource.hpp  Platform.hpp  PlatformGLFW.hpp  Pool.hpp  PostProcessor.hpp  RefCountComponent.hpp  Reflection.hpp  Renderer.hpp  RendererGlobalsData.hpp  (+15 more)
Morpheus/Engine/shaders/: BasicPipeline.json  BasicStructures.hlsl  BasicTextured.psh  BasicTextured.vsh  ComputeIrradiance.psh  ComputeIrradianceSH.csh  CookTorranceIBL.psh  CubemapFace.vsh  CubemapUtil.hlsl  FullscreenTriangle.hlsl  FullscreenTriangle.vsh  GLTFPBRShading.hlsl  GLTFStaticMeshPBR.psh  GLTFStaticMeshPBR.vsh  GLTFVertexProcessing.hlsl  Gamma.hlsl  HdriToCubemap.psh  Im3d.hlsl  Lambert.psh  Lambert.vsh  LambertIBL.psh  Math.hlsl  PBR.psh  PBRCommon.hlsl  PBRShading.hlsl  PBRStructures.hlsl  PostProcessor.psh  PostProcessorStructures.hlsl  PrecomputeBRDF.json  PrecomputeBRDF.psh  PrefilterEnvironment.psh  RendererGlobals.hlsl  Sampling.hlsl  Skybox.json  Skybox.psh  Skybox.vsh  SphericalHarmonics.hlsl  SpriteBatch.gsh  SpriteBatch.psh  SpriteBatch.vsh  (+8 more)
Morpheus/Engine/shaders/Skybox/: Skybox.psh  Skybox.vsh
Morpheus/Engine/shaders/SpriteBatch/: SpriteBatch.gsh  SpriteBatch.psh  SpriteBatch.vsh  SpriteBatchStructures.hlsl
Morpheus/Engine/shaders/StaticMesh/: TexturedStaticMesh.hlsl  Vertex.vsh
Morpheus/Engine/shaders/Utils/: BasicStructures.hlsl  CubemapUtil.hlsl  Gamma.hlsl  Sampling.hlsl  ToneMapping.hlsl
Morpheus/Engine/shaders/cpp/: CMakeLists.txt  embedfile.cpp
Morpheus/Engine/src/: Brdf.cpp  Camera.cpp  DefaultRenderer.cpp  DefaultRendererOld.cpp  EditorCameraController.cpp  EmptyRendererOld.cpp  Engine.cpp  EntityPrototype.cpp  FirstPersonCamera.cpp  Frame.cpp  GeometryResource.cpp  GeometryStructures.cpp  Graphics.cpp  HdriToCubemap.cpp  Im3d.cpp  LightProbe.cpp  LightProbeProcessor.cpp  Loading.cpp  MaterialPrototypes.cpp  MaterialResource.cpp  MaterialView.cpp  PipelineResource.cpp  PlatformGLFW.cpp  PostProcessor.cpp  Reflection.cpp  Renderer.cpp  RendererGlobalsData.cpp  RendererTransformCache.cpp  Resource.cpp  ResourceManager.cpp  Scene.cpp  SceneHeirarchy.cpp  ShaderLoader.cpp  Skybox.cpp  SpriteBatch.cpp  StaticMeshResource.cpp  TextureResource.cpp  ThreadPool.cpp  ThreadTasks.cpp  Transform.cpp  (+1 more)
Morpheus/Engine/src/Components/: Camera.cpp  SkyboxComponent.cpp  StaticMeshComponent.cpp  Transform.cpp
Morpheus/Engine/src/Engine2D/: Editor2D.cpp  Physics2D.cpp  Renderer2D.cpp  Tilemap.cpp
Morpheus/Engine/src/Linux/: InputControllerLinux.cpp  PlatformLinux.cpp
Morpheus/Engine/src/Materials/: BasicTexturedMaterial.cpp  ImageBasedLightingView.cpp  JsonMaterial.cpp  MaterialPrototypes.cpp  StaticMeshPBRMaterial.cpp  WhiteMaterial.cpp
Morpheus/Engine/src/Pipelines/: BasicTextured.cpp  ImageBasedLightingView.cpp  PBRStaticMesh.cpp  PipelineFactory.cpp  Skybox.cpp  StaticMeshPBR.cpp  White.cpp
Morpheus/Engine/src/Raytrace/: DefaultRaytracer.cpp
Morpheus/Engine/src/Resources/: Buffer.cpp  Cache.cpp  EmbeddedFileLoader.cpp  EmbeddedGeometry.cpp  FrameIO.cpp  Geometry.cpp  GeometryResource.cpp  Material.cpp  MaterialResource.cpp  PipelineResource.cpp  RawGeometry.cpp  RawSampler.cpp  RawTexture.cpp  Resource.cpp  ResourceData.cpp  ResourceManager.cpp  ResourceSerialization.cpp  Shader.cpp  ShaderLoader.cpp  ShaderPreprocessor.cpp  ShaderResource.cpp  Texture.cpp  TextureIterator.cpp  TextureResource.cpp
Morpheus/Engine/src/Systems/: BulletPhysics.cpp  DefaultRenderer.cpp  EmptyRenderer.cpp  GeometryCache.cpp  ImGuiSystem.cpp  Physics.cpp  Renderer.cpp  RendererBridge.cpp  System.cpp  (+4 more)
Morpheus/HelloWorld/: CMakeLists.txt  main.cpp
Morpheus/Im3dGizmo/: CMakeLists.txt  main.cpp
Morpheus/Im3dTest/: CMakeLists.txt  main.cpp
Morpheus/PBR/: CMakeLists.txt  main.cpp
Morpheus/PBR/assets/: brick.json  cerberus.json  cerberusmat.json  material.json  static_mesh.json  testpbr.json
Morpheus/Physics/: CMakeLists.txt  main.cpp
Morpheus/Physics/assets/: brick.json  testpbr.json
Morpheus/RawTextureTest/: CMakeLists.txt  main.cpp
Morpheus/Renderer2DTest/: CMakeLists.txt  main.cpp
Morpheus/SpriteBatchTest/: CMakeLists.txt  main.cpp
Morpheus/Test/: CMakeLists.txt  main.cpp
Morpheus/Test/assets/: cerberus.json  material.json  mesh.psh  mesh_pipeline.json  mesh_pipeline_final.json  mesh_pipeline_textured.json  mesh_textured.vsh  mesh_textured_inst.psh  mesh_textured_inst.vsh  pipeline.json  static_mesh.json  triangle.psh  triangle_pipeline.json
Tests/: CMakeLists.txt
Tests/BulletTest/: CMakeLists.txt  main.cpp
Tests/ComputeShaderTest/: CMakeLists.txt  main.cpp
Tests/ComputeShaderTest/shaders/: Mandelbrot.csh
Tests/EmbeddedGeoTest/: CMakeLists.txt  main.cpp
Tests/HelloWorld/: main.cpp
Tests/Im3dGizmo/: main.cpp
Tests/Im3dTest/: CMakeLists.txt  main.cpp
Tests/Pbrt-Test/: CMakeLists.txt  main.cpp
Tests/PbrtTest/: main.cpp
Tests/RawTextureTest/: CMakeLists.txt  main.cpp
Tests/RaytraceTest/: CMakeLists.txt  main.cpp
Tests/SpriteBatchTest/: CMakeLists.txt  main.cpp
Tests/TextureTest/: CMakeLists.txt  main.cpp
(+82 files in other folders)
